--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="m-3 bg-dark">
     <header>
-        <h2>Seach your Favourite Phone.</h2>
+        <h2 class="text-center text-white">Seach your Favourite Phone.</h2>
+        <div class="input-group mx-auto mt-5 w-50">
+            <input type="text" class="form-control" placeholder="Search Your Favourite One"
+                aria-label="Recipient's username" aria-describedby="button-addon2" id="searchfield">
+            <button onclick="searchPhone()" class="btn btn-outline-secondary text-white" type="button"
+                id="button-addon2">search</button>
+        </div>
     </header>
+    <main>
+
+    </main>
     <!-- Boostrap link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
