--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body class="m-3 bg-dark">
+<body class="m-5 bg-dark">
     <header>
         <h2 class="text-center text-white">Seach your Favourite Phone.</h2>
         <div class="input-group mx-auto mt-5 w-50">
@@ -20,7 +20,11 @@
                 id="button-addon2">search</button>
         </div>
     </header>
-    <main>
+    <main class="mt-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="search-result">
+
+
+        </div>
 
     </main>
     <!-- Boostrap link -->
