--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         </div>
     </header>
     <main class="mt-5">
-        <div class="row row-cols-1 row-cols-md-3 g-4" id="search-result">
+        <!-- details -->
+        <div id="phone-details" class="w-75 mx-auto mb-5">
+
+        </div>
+        </div>
+        <!-- innertext -->
+        <div class="row row-cols-1 row-cols-md-3 g-4 text-danger" id="search-result">
 
 
         </div>
