--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         </div>
         <!-- innertext -->
-        <div class="row row-cols-1 row-cols-md-3 g-4 text-danger" id="search-result">
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="search-result">
 
 
         </div>
